@@ -26,14 +26,5 @@ try:
     import gtk
     gtk
 except ImportError:
-    try:
-        import pygtk
-        pygtk.require('2.0')
-    except:
-        pass
-    try:
-        import gtk
-        gtk
-    except ImportError:
-        raise SystemExit(
-            "PyGTK is required by kiwi.ui")
+    raise SystemExit(
+        "PyGTK is required by kiwi.ui")
